--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -38,8 +38,7 @@
   border-radius: 15px;
   padding: 0 0.1rem;
   color: white;
-  width: 100%;
-  /* max-width: 8rem; */
+  margin: 0 0.4rem;
   transition: 0.2s !important;
 }
 .navSearch input {
@@ -63,9 +62,4 @@
   max-width: 80% !important;
   width: 100% !important;
 } */
-/* SIDEBAR */
-.sidebar {
-  background-color: white;
-  border-radius: 20px;
-  padding: 1rem;
-}
+
