--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -20,13 +20,12 @@
 .menuBar {
   position: fixed;
   /* border-top-right-radius: 10%; */
-  border-top-left-radius: 40%;
-  border-bottom-left-radius: 40%;
+  border-radius: 50%;
   padding: 0.8rem;
   background-color: #587483;
   color: white;
-  bottom: 0;
-  right: 0;
+  bottom: 1px;
+  right: -5px;
 }
 
 /* NAV SEARCH */
@@ -62,4 +61,3 @@
   max-width: 80% !important;
   width: 100% !important;
 } */
-
