--- a/src/components/sidebar/style.css
+++ b/src/components/sidebar/style.css
@@ -34,3 +34,10 @@
   text-decoration: none;
   color: black;
 }
+.findedUser {
+  position: absolute;
+  opacity: 1;
+  content: "";
+  background-color: rgb(223, 223, 223);
+  padding: 0.4rem;
+}
