--- a/src/components/sidebar/style.css
+++ b/src/components/sidebar/style.css
@@ -38,6 +38,20 @@
   position: absolute;
   opacity: 1;
   content: "";
-  background-color: rgb(223, 223, 223);
-  padding: 0.4rem;
+  top: 100%;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  right: 1rem;
+  left: 1rem;
+  background-color: rgb(243, 243, 243);
+  padding: 0.4rem 0;
+  overflow: hidden;
+  /* width: calc(100% - 2rem); */
+  z-index: 300;
+}
+.findedUserImg {
+  width: 30px;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
 }
