--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -1,9 +1,27 @@
 .post-container {
   width: 100%;
   background-color: white;
-  padding: 1rem;
+  padding: 1rem 0;
   height: 100%;
 }
 .side-drawer {
   min-width: 18rem !important;
+}
+.post {
+  margin: 1rem 0;
+  box-shadow: 0 2px 10px rgba(128, 128, 128, 0.555);
+  display: flex;
+  flex-direction: column;
+}
+.post-img {
+  width: 50px;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+}
+.post-create {
+  background-color: rgba(100, 148, 237, 0.267);
+  margin: 0 1rem;
+  padding: 0.2rem;
+  border-radius: 20px;
 }
