--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -12,6 +12,7 @@
   box-shadow: 0 2px 10px rgba(128, 128, 128, 0.555);
   display: flex;
   flex-direction: column;
+  border-radius: 5px;
 }
 .post-img {
   width: 50px;
@@ -24,4 +25,58 @@
   margin: 0 1rem;
   padding: 0.2rem;
   border-radius: 20px;
+}
+/* IMAGE UPLOAD SLIDER */
+.upload-images {
+  position: relative;
+  align-items: center;
+  display: flex;
+  border-radius: 20px;
+  padding: 1rem;
+  gap: 1rem;
+  background-color: rgba(224, 224, 224, 0.192);
+  overflow-x: scroll;
+}
+.delete-img-button {
+  position: absolute;
+  content: "";
+  border-radius: 50%;
+  opacity: 0.3;
+  right: 2px;
+  top: 2px;
+  padding: 0;
+  color: black;
+  background-color: azure;
+  transition: 0.2s;
+}
+.delete-img-button:hover {
+  opacity: 0.8;
+}
+/*  ========== Delete Button */
+.delete-btn {
+  border: unset;
+  min-height: 1rem;
+  min-width: 1rem;
+  border-radius: 50%;
+  /* position: absolute; */
+  display: flex;
+  left: 0.2rem;
+  color: white;
+  transition: 0.3s !important;
+  background-color: rgb(253, 94, 94);
+}
+.delete-btn svg {
+  transition: 0.5s !important;
+  color: rgb(253, 94, 94) !important;
+  display: none;
+}
+.delete-btn:hover svg {
+  transform: scale(0.8);
+  color: white !important;
+  display: block;
+}
+.delete-btn:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+  border: 0px solid rgb(253, 94, 94);
 }
