--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -8,7 +8,7 @@
   min-width: 18rem !important;
 }
 .post {
-  margin: 1rem 0;
+  /* margin: 1rem 0; */
   box-shadow: 0 2px 10px rgba(128, 128, 128, 0.555);
   display: flex;
   flex-direction: column;
