--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -8,6 +8,7 @@
   justify-content: space-between;
   align-items: center;
   color: white;
+  z-index: 500;
 }
 .logo-style {
   color: white;
@@ -20,12 +21,13 @@
 .menuBar {
   position: fixed;
   /* border-top-right-radius: 10%; */
+  box-shadow: 0 0 5px rgb(23, 66, 71);
   border-radius: 50%;
   padding: 0.8rem;
   background-color: #587483;
   color: white;
-  bottom: 1px;
-  right: -5px;
+  bottom: 3rem;
+  right: -10px;
 }
 
 /* NAV SEARCH */
