--- a/src/components/messages/style.css
+++ b/src/components/messages/style.css
@@ -1,7 +1,7 @@
 .mainMessageCard {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   box-shadow: 0 0 10px grey;
   background-color: white;
   height: 100%;
@@ -33,7 +33,7 @@
   overflow-y: scroll !important;
 }
 .chat-profile {
-  height: 2.6rem;
+  height: 3.2rem;
   padding: 0.4rem 1rem;
   background-color: #eeeeeea6;
 }
@@ -110,6 +110,45 @@
   background-color: rgba(145, 145, 145, 0.03);
   box-shadow: unset !important;
   color: white;
+}
+.searchUserList {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: rgb(235, 225, 213);
+  top: 0;
+  border-radius: 10px;
+  box-shadow: 0 0 10px grey;
+  padding: 0.2rem 0.2rem;
+  z-index: 300;
+}
+.activeUserList {
+}
+.singleFindedUser {
+  padding: 0.1rem;
+  display: flex !important;
+  align-items: center;
+  margin: 0.1rem 0;
+  gap: 1rem;
+  border-radius: 10px;
+  background-color: rgb(240, 240, 240);
+}
+/* ================ */
+.singleChat {
+  display: flex;
+  padding: 0.4rem;
+  gap: 0.5rem;
+  border-top: 1px solid rgba(128, 128, 128, 0.349);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.349);
+  transition: 0.2s;
+  z-index: 100;
+}
+.singleChat:hover {
+  box-shadow: 0 0 5px grey;
+  background-color: rgba(228, 228, 228, 0.801);
+  cursor: pointer;
+  transform: scale(1.02);
 }
 /*  MESAGE BTN APPEAR */
 .msgBtnMobile {
