--- a/src/components/profile/style.css
+++ b/src/components/profile/style.css
@@ -48,3 +48,21 @@
   width: auto;
   margin: 0.2rem 0;
 }
+
+/*=======================STORE */
+.storeTab {
+  padding: 1rem;
+  position: relative;
+  display: flex;
+  width: 100%;
+  overflow-x: scroll;
+  gap: 1rem;
+}
+.storeItem {
+  position: relative;
+  min-width: 13rem;
+  max-width: 13rem;
+  border: 1px solid rgba(128, 128, 128, 0.3);
+  border-radius: 10px;
+  overflow: hidden;
+}
