--- a/src/components/messages/style.css
+++ b/src/components/messages/style.css
@@ -13,6 +13,7 @@
 
 .sendmessage {
   background-color: #f1efed;
+  box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.329) !important;
   padding: 0.6rem 1rem;
 }
 .sendmessage input {
@@ -31,7 +32,7 @@
   background-size: auto;
   background-repeat: initial;
   background-position: center;
-  max-height: calc(100vh - 10.4rem);
+  max-height: calc(100vh - 9rem);
   height: 100% !important;
   overflow-y: scroll !important;
 }
@@ -40,9 +41,10 @@
   position: relative;
   justify-content: space-between;
   align-items: center;
-  height: 4.6rem;
-  padding: 0.4rem 1rem;
+  height: 3.8rem;
+  padding: 0 1rem;
   background-color: #eeeeeea6;
+  box-shadow: 0 1px 5px grey;
 }
 .messageStyle {
   position: relative;
@@ -153,23 +155,29 @@
   display: flex;
   padding: 0.4rem;
   gap: 0.4rem;
-  background-color: #a9b5bdb7;
-  border-top: 1px solid #c9c9c9;
-  border-bottom: 1px solid #c9c9c9;
-  color: white;
-  transition: 0.2s;
+  background-color: white;
+  color: darkslategray;
+  transition: 0.1s;
   transition-timing-function: ease-in;
   z-index: 100;
 }
 .singleChat:hover {
   box-shadow: 0 0 5px grey;
-  background-color: rgb(247, 247, 247);
+  background-color: rgb(244, 250, 255);
   color: rgb(68, 68, 68);
   cursor: pointer;
+  z-index: 900;
   transform: scale(1.02);
 }
+.singleChat:active {
+  box-shadow: 0 0 5px grey;
+  z-index: 900;
+  transform: scale(1);
+}
 .activeChat {
-  background-color: #f5f1ed;
+  background-color: #ffffff;
+  z-index: 400;
+  box-shadow: 0 0 5px grey;
   color: black;
 }
 /*  MESAGE BTN APPEAR */
