--- a/src/components/messages/style.css
+++ b/src/components/messages/style.css
@@ -153,6 +153,12 @@
   background-color: rgba(255, 255, 255, 0.801);
   transform: scale(1.02);
 }
+.chatLastMess {
+  white-space: nowrap;
+  max-width: 5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 /* ================ */
 .singleChat {
   display: flex;
