Update Cart, Profile

--- a/src/components/sidebar/style.css
+++ b/src/components/sidebar/style.css
@@ -54,3 +54,9 @@
   aspect-ratio: 1/1;
   object-fit: cover;
 }
+.selectedNavb {
+  position: relative;
+  box-shadow: 0 0 5px grey;
+  width: 100%;
+  z-index: 990;
+}
