Creator Card, My bookings card

--- a/src/components/messages/style.css
+++ b/src/components/messages/style.css
@@ -193,11 +193,11 @@
 .msgBtnMobile {
   position: absolute;
   left: -1.5rem;
-  bottom: 3rem;
-  background-color: rgb(150, 141, 132);
+  bottom: 2.8rem;
+  background-color: #5d7888;
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
-  padding: 0.8rem;
+  padding: 0.7rem;
   color: white;
   box-shadow: 0 0 5px grey;
 }
