--- a/src/components/profile/style.css
+++ b/src/components/profile/style.css
@@ -83,3 +83,27 @@
   margin: 0.4rem 0;
   gap: 1rem;
 }
+/* 
+ */
+.appointHoursPick {
+  box-shadow: 0 0 5px grey;
+  background-color: rgb(240, 240, 240);
+  border-radius: 20px;
+  min-width: 5rem;
+  display: flex;
+  justify-content: center;
+  padding: 0.4rem 1rem;
+  margin: 0.2rem 0;
+  cursor: pointer;
+  transition: 0.1s;
+}
+.appointHoursPick:hover {
+  transform: scale(1.03);
+  background-color: rgb(255, 255, 255);
+}
+.appointHoursPick:active {
+  transform: scale(1);
+}
+.appointHoursActive {
+  background-color: rgb(255, 255, 255);
+}
