--- a/src/components/creator/style.css
+++ b/src/components/creator/style.css
@@ -12,6 +12,7 @@
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
+  background-color: white;
   /* border-radius: 5px; */
 }
 .creatorItemCard {
