--- a/src/components/creator/style.css
+++ b/src/components/creator/style.css
@@ -1,5 +1,5 @@
 .cardWrapper {
-  padding: 1em;
+  padding: 0.5rem;
   box-shadow: 0 5px 10px grey;
   /* border-bottom-left-radius: 20px; */
   /* border-bottom-right-radius: 20px; */
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
+  height: 100%;
   /* border-radius: 5px; */
 }
 .creatorItemCard {
@@ -25,8 +26,8 @@
   align-items: center;
 }
 .availItemBook {
-  border-radius: 10px;
-  box-shadow: 0 0 3px grey;
+  border-radius: 5px;
+  box-shadow: 0 0 5px grey;
   background-color: white;
 
   padding: 0.4rem;
