--- a/src/components/creator/style.css
+++ b/src/components/creator/style.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  height: 100%;
+  /* height: 100%; */
   /* border-radius: 5px; */
 }
 .creatorItemCard {
