--- a/src/components/messages/style.css
+++ b/src/components/messages/style.css
@@ -52,13 +52,14 @@
 .messageStyle {
   position: relative;
   background-color: white;
-  max-width: 50%;
-  width: 100%;
+  max-width: 70%;
+  width: fit-content;
   border-radius: 10px;
   padding: 0.2rem 0.4rem;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  box-shadow: 0 0 5px grey;
 }
 .emojiBoard-message {
   position: absolute !important;
