--- a/src/components/feed/style.css
+++ b/src/components/feed/style.css
@@ -24,6 +24,7 @@
   background-color: rgba(100, 148, 237, 0.267);
   padding: 0.2rem;
   border-radius: 20px;
+  margin: 0 0.4rem;
 }
 /* IMAGE UPLOAD SLIDER */
 .upload-images {
