Login style fix

--- a/src/components/authorization/style.css
+++ b/src/components/authorization/style.css
@@ -25,3 +25,10 @@
   cursor: pointer;
   user-select: none;
 }
+.loginWrapper {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
